(2002/06/20 - broeker) Fix operation of -C -L0 if pattern contains any
	               upper-case characters.
(2002/06/20 - broeker) Fix handling of non-standard whitespace in Flex 
	               scanner. Should make it more robust against DOS text
		       files that ended up on a Unix box, and other unexpected
		       characters, and avoid SF bug #508060.
(2002/03/16 - broeker) Fix namelist handling bug: ./ in paths would cause 
	               search for next name to fail (SF bug #529618). 
		       -I/-p and their argument no longer have to be in 
		       one line inside the namelist file, and -I pathname
		       can now be quote-escaped.
(2002/03/13 - broeker) Add AC_PREREQ() call to configure.in.  Enables Cygwin
	               automagic hack to call the right autoconf for us.
(2002/03/13 - broeker) Replace all references to manpage 'regcmp(3X)' in
	               messages and comments by regcomp(3), which is what 
		       cscope actually uses.
(2002/03/08 - broeker) Fix completely broken handling of filenames with blanks
	               in namelist files.  Use fgets + sscanf, not fscanf, and
		       don't split at whitespace inside "" quotes.
(2001/01/04 - broeker) Survive Cygwin "binmode" mounted filesystems by 
	               explicitly forcing text mode for source files.
(2002/01/02 - broeker) Updated files supplied or generated by automake to 
	               version 1.4-p5, the current recommended version in the
		       1.4 series.
(2002/01/02 - broeker) Add handling of "quoted filenames with blanks in" in
	               namelist files
(2001/11/22 - broeker) Quell some compiler warnings caused by missing #includes
	               and private declarations of system library functions.
(2001/10/30 - petrs)   Added Joe Steffen to author's list as the creator.
(2001/10/19 - broeker) Replace usages of freopen() by fclose()/fopen() pairs
		       to work around bug in some Linux libc constellation.